[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/tasks/snake/Hand.gd" type="Script" id=1]
[ext_resource path="res://assets/art/snake/hand_knife.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/hit_flash.tres" type="Material" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 824, 30 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 67.0
height = 128.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 55.0
height = 102.0

[node name="Hand" type="Area2D"]
material = ExtResource( 3 )
position = Vector2( 419, 791 )
script = ExtResource( 1 )

[node name="HandKnife" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1772.0
margin_top = -30.524
margin_right = -213.0
margin_bottom = 31.476
color = Color( 0.8, 0.615686, 0.431373, 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 0, 2.47601 )
points = PoolVector2Array( -230, -36, -1772, -36 )
width = 5.476
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 0, 68.476 )
points = PoolVector2Array( -225, -36, -1772, -36 )
width = 5.476
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -956, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -100, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 143, 0 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="BloodPosition" type="Position2D" parent="."]
position = Vector2( 205, 0 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
